--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "dark-ui",
   "version": "0.1.0",
   "private": true,
+  "proxy":"https://adminapi.vercel.app",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -15,11 +16,17 @@
     "autoprefixer": "10.4.15",
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
+    "localtunnel": "^2.0.2",
     "next": "13.4.19",
     "postcss": "8.4.29",
+    "query-string": "^8.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2"
+  },
+  "devDependencies": {
+    "prettier": "^3.0.3",
+    "prettier-plugin-tailwindcss": "^0.5.4"
   }
 }
