--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "dark-ui",
   "version": "0.1.0",
   "private": true,
-  "proxy":"https://adminapi.vercel.app",
+  "proxy": "https://adminapi.vercel.app",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -18,10 +18,12 @@
     "eslint-config-next": "13.4.19",
     "localtunnel": "^2.0.2",
     "next": "13.4.19",
+    "nextjs-toploader": "^1.4.2",
     "postcss": "8.4.29",
     "query-string": "^8.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-query": "^3.39.3",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2"
   },
