--- a/package.json
+++ b/package.json
@@ -10,22 +10,32 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@editorjs/editorjs": "^2.28.0",
+    "@editorjs/header": "^2.7.0",
+    "@editorjs/paragraph": "^2.10.0",
     "@types/node": "20.5.7",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
+    "@uidotdev/usehooks": "^2.4.0",
     "autoprefixer": "10.4.15",
+    "editorjs-html": "^3.4.3",
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
     "localtunnel": "^2.0.2",
-    "next": "13.4.19",
+    "next": "^13.5.4",
+    "next-themes": "^0.2.1",
     "nextjs-toploader": "^1.4.2",
-    "postcss": "8.4.29",
+    "postcss": "^8.4.31",
     "query-string": "^8.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-query": "^3.39.3",
+    "react-slick": "^0.29.0",
+    "react-touch-drag-slider": "^2.2.5",
+    "swiper": "^10.3.1",
     "tailwindcss": "3.3.3",
-    "typescript": "5.2.2"
+    "typescript": "5.2.2",
+    "use-is-rerender": "^2.0.0"
   },
   "devDependencies": {
     "prettier": "^3.0.3",
